<resources>
    <string name="app_name">Gueder</string>
    <string name="hello_world">Etiqueta perruna</string>
    <string name="offline_weather">Offline Weather</string>
    <string name="change_american_system">CAMBIAR A SISTEMA AMERICANO</string>
    <string name="change_european_system">CAMBIAR A SISTEMA EUROPEO</string>
    <string name="max_temp_label">Temperatura máxima: %.2f</string>
    <string name="min_temp_label">Temperatura mínima: %.2f</string>
    <string name="humidity_label">Humedad: %.2f</string>
    <string name="forecast_description_label">Soleado con nubes.</string>
    <string name="celsius_label">Unidades Celsius</string>
    <string name="farenheit_label">Unidades Farenheit</string>
    <string name="accept_label">Aceptar</string>
    <string name="cancel_label">Cancelar</string>
    <string name="settings">Ajustes</string>
    <string name="updated_preferences">Preferencias actualizadas</string>
    <string name="undo">Deshacer</string>
    <string name="city_example">Madrid</string>
</resources>
