<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="factory.novas.gueder.SettingsActivity">

    <RadioGroup
        android:id="@+id/units_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/celsius_rb">

        <RadioButton
            android:id="@+id/celsius_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celsius_label"/>

        <RadioButton
            android:id="@+id/farenheit_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/farenheit_label"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_label"
            android:id="@+id/accept_btn"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_label"
            android:id="@+id/cancel_btn"/>

    </LinearLayout>

</LinearLayout>
