<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ForecastActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/title_margin_bottom"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/city_example"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/forecast_image"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <TextView
            android:id="@+id/max_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_temp_label"/>

        <TextView
            android:id="@+id/min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_temp_label"/>

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_label"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/forecast_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sun_cloud"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/city"/>

    <TextView
        android:id="@+id/forecast_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forecast_description_label"
        android:layout_below="@id/forecast_image"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
